--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,18 @@
  *= require_self
  */
 
-body { padding-top: 100px; }
+/*body { padding-top: 100px; }*/
+body { padding-top: 60px; }
 footer { margin-top: 100px; }
 table, td, th { vertical-align: middle; border: none; }
 th { border-bottom: 1px solid #DDD; }
+#name {
+    padding-bottom: 10px;
+}
+#description{
+    padding-bottom: 10px;
+}
+#picture{
+    padding-bottom: 10px;
+}
+}
