--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,4 +28,17 @@ th { border-bottom: 1px solid #DDD; }
 #picture{
     padding-bottom: 10px;
 }
+.navbar {
+  min-height: 38px;
+  background-color: #f55e55;
+}
+.navbar a.brand { font-size: 18px; }
+.navbar a.brand:hover {
+  color: #fff;
+  background-color: transparent;
+  text-decoration: none;
+}
+footer {
+  background-color: #ebebeb;
+  padding: 30px 0;
 }
