--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -36,5 +36,5 @@
       <%= f.submit "Submit your idea", class: "btn btn-success" %>
     </div>
   </div>
-  
+  <%= f.hidden_field :user_id, value: current_user.id %>
 <% end %>
